# HarmonicGalaxy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_LOG.md  LICENSE  Makefile  README.md  README_zh.md  cint.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  INSTALLATION.md  LLM_CLIENT.md  LOGGING.md
examples/: llm_client_example.py  logging_example.py
harmonicgalaxy/: __init__.py
harmonicgalaxy/agents/: __init__.py
harmonicgalaxy/core/: __init__.py
harmonicgalaxy/events/: __init__.py
harmonicgalaxy/llm/: __init__.py  client.py  types.py
harmonicgalaxy/llm/config/: __init__.py
harmonicgalaxy/llm/providers/: __init__.py  anthropic_client.py  openai_client.py  qwen_client.py
harmonicgalaxy/orchestrator/: __init__.py
harmonicgalaxy/state/: __init__.py
harmonicgalaxy/utils/: __init__.py  decorators.py  logging.py
scripts/: setup.sh
tests/: __init__.py  conftest.py
tests/unit/: test_example.py  test_llm_client.py  test_llm_types.py  test_logging.py  test_qwen_client.py
